--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "vendor-apparel-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "build": "echo"
   },
   "keywords": [],
   "author": "",
